Bug 118448 - style drop downs are static
Summary: style drop downs are static
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks: Writer-Styles-Paragraph-Combobox
  Show dependency treegraph
 
Reported: 2018-06-29 11:10 UTC by Elmar
Modified: 2019-09-24 18:24 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elmar 2018-06-29 11:10:56 UTC
Description:
in LO Writer, the drop down in the sidebar and the toolbar are static. The don't change as styles get used in the document. Most noticeable is that the Default style can only be chosen by using the "styles and formatting" option in the sidebar or by suing the Styles menu item.

Steps to Reproduce:
1. open writer
2. 
3.

Actual Results:
if the default style is what is set in the opening template, it appears in the drop down box. However, it does not appear in the list when one clicks on the down arrow.

Expected Results:
should work as in older versions.


Reproducible: Always


User Profile Reset: No



Additional Info:
[Information automatically included from LibreOffice]
Locale: en-US
Module: TextDocument
[Information guessed from browser]
OS: Linux (All)
OS is 64bit: yes
Version: 6.2.0.0.alpha0+
Build ID: a2937b4af3b1d148fbead50f06e7a196bf5850cb
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-06-26_23:34:51
Locale: en-GB (en_ZA.UTF-8); Calc: group threaded
Comment 1 Drew Jensen 2018-06-29 14:45:07 UTC
I'm using Ubuntu 18.04 and Libo build:Version: 6.2.0.0.alpha0+
Build ID: 6af8aa411189993942d4a8a13199b0a5e026c003
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-06-28_23:11:37
Locale: en-US (en_US.UTF-8); Calc: group threaded

I load up one of the LibrOffice user guides, which have plenty of custom styles.

Both the toolbar and sidebar Styles drop down show a limited set of styles, and both have a 'more styles' entry which if you select then lists all of the styles in the document.

So, I'm not sure what it is that is the problem you are reporting.

Thanks
Comment 2 Dieter 2018-07-01 16:08:45 UTC
(In reply to Drew Jensen from comment #1)
> So, I'm not sure what it is that is the problem you are reporting.

I agree. Elmar, can you perhaps add a screenshot, that shows the problem. You also mentioned, that the problem not appears in older versions. What version you are thinking of?
Comment 3 Buovjaga 2018-07-15 13:06:46 UTC
(In reply to Elmar from comment #0)
> Actual Results:
> if the default style is what is set in the opening template, it appears in
> the drop down box. However, it does not appear in the list when one clicks
> on the down arrow.

Reproduced.

Bisected with win 6.2 repo to https://cgit.freedesktop.org/libreoffice/core/commit/?id=d70f53a8269be31f0412926afa5ba826faed6633

tdf#100894 freeze when editing calc file with bazillions of cond formatting
This does not fix the root cause of this problem, which is simply that
the document has a bazillion style sheets. Either the program which
exported this document is broken, or our importer is not correctly de-
duplicating the imported stylesheets.

Adding Cc: to Noel Grandin
Comment 4 Commit Notification 2018-07-17 15:05:46 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=28aa5b950a0db9242ce350704cd443c4c6a05fd5

tdf#118448 style drop downs are static

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.