tdf#118448 style drop downs are static

regression from
	commit d70f53a8269be31f0412926afa5ba826faed6633
	tdf#100894 freeze when editing calc file with bazillions of cond
formatting

Change-Id: Ia2fcb254b5f1ce7cb0512566e2453bd527be3cd9